--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "release": "tsc && npm version patch && npm publish"
   },
-  "files": ["dist"],
-  "version": "0.0.1"
+  "files": [
+    "dist"
+  ],
+  "version": "0.0.2"
 }
