--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "bundler",
     "verbatimModuleSyntax": true,
     "outDir": "dist",
+    "declaration": true,
 
     /* Linting */
     "strict": true,
