--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "dependencies": {
     "obj-cached": "latest"
   },
-  "version": "0.0.13"
+  "version": "0.0.13",
+  "description": "Simply cache your object in ./cache.json file.",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
